fixed navbar overlap over image gallery with editing navbar css z-index to 9999

--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -19,6 +19,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 9999;
 }
 
 #navbar li{
